# tomoro

./: .env  .env.example  embeddings.db  knowledge_graph.ipynb  pg.ipynb  pyproject.toml  readme.md
src/: config.py  main.py
src/api/: models.py  routes.py
src/core/: database.py  embeddings.py  evaluation.py  rag.py
src/data/: benchmarking.py
src/utils/: helpers.py
